--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_KEY=<YOUR OPENAI KEY>
+API_KEY=sk-C8AfTSAQ4FLMgC594lbnT3BlbkFJdKDQFcvFXuvMQ9w75mjVV
 MONGODB_URI=mongodb+srv://dornbots:5s3Tcs9RdPqLTmij@dornbot.clhjn5v.mongodb.net/?retryWrites=true&w=majority
